Fixed z-index on mozilla (removed opacity property)

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
                                 <div class="absolute expand" transform="rx: 90">
                                     <div class="gravity expand">
-                                        <div class="sheet absolute transluent" transform="z: 230; rx: -30; ry: -20">
+                                        <div class="sheet absolute" transform="z: 230; rx: -30; ry: -20">
                                             <div class="back page absolute expand hide-back" transform="ry: 180"><strong>Goat face</strong></div>
                                             <img class="front page hide-back" src="https://c2.staticflickr.com/4/3103/2639549349_ee6952a23f.jpg"/>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="sheet absolute transluent" transform="z: -225; ry: 180; rz: -30; rx: -10">
+                                <div class="sheet absolute" transform="z: -225; ry: 180; rz: -30; rx: -10">
                                     <div class="back page absolute expand hide-back" transform="ry: 180"><strong>Greeks</strong></div>
                                     <img class="front page hide-back" src="https://c3.staticflickr.com/3/2827/9840901813_80cdccff89_c.jpg"/>
                                 </div>
