Changed rotation way of third page

--- a/index.html
+++ b/index.html
@@ -40,24 +40,30 @@
                                 </div>
 
                                 <div class="sheet absolute" transform="rz: 15; y: -80">
-                                    <div class="gravity expand">
+                                    <div class="gravity">
                                         <div class="back page absolute expand hide-back" transform="ry: 180; rz:180"><strong>The search</strong></div>
                                         <img class="front page hide-back" src="https://c3.staticflickr.com/3/2856/9840909545_4b7a28c426_c.jpg"/>
                                     </div>
                                 </div>
 
                                 <div class="absolute expand" transform="rx: 90">
-                                    <div class="gravity expand">
-                                        <div class="sheet absolute" transform="z: 230; rx: -30; ry: -20">
+                                    <div class="gravity">
+                                        <div class="sheet absolute" transform="z: 250; rx: -30; ry: -20">
                                             <div class="back page absolute expand hide-back" transform="ry: 180"><strong>Goat face</strong></div>
                                             <img class="front page hide-back" src="https://c2.staticflickr.com/4/3103/2639549349_ee6952a23f.jpg"/>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="sheet absolute" transform="z: -225; ry: 180; rz: -30; rx: -10">
-                                    <div class="back page absolute expand hide-back" transform="ry: 180"><strong>Greeks</strong></div>
-                                    <img class="front page hide-back" src="https://c3.staticflickr.com/3/2827/9840901813_80cdccff89_c.jpg"/>
+                                <div class="sheet absolute" transform="z: -225; rz: -30; rx: -10" bak-transform="z: -225; ry: 180; rz: -30; rx: -10">
+                                    <div transform="ry: 90">
+                                        <div class="gravity">
+                                            <div transform="ry: -90">
+                                                <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180"><strong>Greeks</strong></div>
+                                                <img class="front page hide-back" transform="rz: 180" src="https://c3.staticflickr.com/3/2827/9840901813_80cdccff89_c.jpg"/>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="front-cover expand" transform="oy: 1; rx: -17.5">
