--- a/index.html
+++ b/index.html
@@ -55,12 +55,36 @@
                                     </div>
                                 </div>
 
-                                <div class="sheet absolute" transform="z: -225; rz: -30; rx: -10" bak-transform="z: -225; ry: 180; rz: -30; rx: -10">
+                                <div class="sheet absolute" transform="y: 30; z: -225; rz: -30; rx: -10">
                                     <div transform="ry: 90">
                                         <div class="gravity">
                                             <div transform="ry: -90">
                                                 <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180"><strong>Greeks</strong></div>
                                                 <img class="front page hide-back" transform="rz: 180" src="https://c3.staticflickr.com/3/2827/9840901813_80cdccff89_c.jpg"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="sheet absolute" transform="x: -200; z: 150; rx: 30">
+                                    <div transform="rx: 90; ry: 180">
+                                        <div class="gravity">
+                                            <div transform="rx: -90">
+                                                <div class="back page absolute expand hide-back" transform="ry: 180"><strong>The star</strong></div>
+                                                <img class="front page hide-back" src="https://c4.staticflickr.com/4/3255/2793725349_5205129a97.jpg"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="sheet absolute" transform="x: 225; y: -125; z: 150; rx: 30; ry: 30; rz: -15">
+                                    <div transform="ry: 90">
+                                        <div class="gravity">
+                                            <div transform="ry: -90">
+                                                <div class="gravity">
+                                                    <div class="back page absolute expand hide-back" transform="ry: 180"><strong>The end</strong></div>
+                                                    <img class="front page hide-back" src="https://c4.staticflickr.com/4/3671/9840742114_afb7cf5dc2_z.jpg"/>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
