Refined fourth photo coordinates

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                                 <div class="sheet absolute" transform="rz: 15; y: -80">
                                     <div class="gravity">
                                         <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
-                                            <div class="title">The search</div>
-                                            <div class="description" transform="rz: 180">The search</div>
+                                            <div class="description">The search</div>
                                         </div>
                                         <img class="front page hide-back"/>
                                         <!--<img class="front page hide-back" src="https://c3.staticflickr.com/3/2856/9840909545_4b7a28c426_c.jpg"/>-->
@@ -54,7 +53,6 @@
                                     <div class="gravity">
                                         <div class="sheet absolute" transform="z: 250; rx: -30; ry: -20">
                                             <div class="back page absolute expand hide-back" transform="ry: 180">
-                                                <div class="title" transform="rz: 180">Goat face</div>
                                                 <div class="description">Goat face</div>
                                             </div>
                                             <img class="front page hide-back"/>
@@ -68,7 +66,6 @@
                                         <div class="gravity">
                                             <div transform="ry: -90">
                                                 <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180">
-                                                    <div class="title" transform="rz: 180">Greeks</div>
                                                     <div class="description">Greeks</div>
                                                 </div>
                                                 <img class="front page hide-back" transform="rz: 180"/>
@@ -78,12 +75,11 @@
                                     </div>
                                 </div>
 
-                                <div class="sheet absolute" transform="x: -200; z: 150; rx: 30">
+                                <div class="sheet absolute" transform="x: -200; y: -75; z: 150; rx: 30">
                                     <div transform="rx: 90; ry: 180">
                                         <div class="gravity">
                                             <div transform="rx: -90">
                                                 <div class="back page absolute expand hide-back" transform="ry: 180">
-                                                    <div class="title" transform="rz: 180">The star</div>
                                                     <div class="description">The star</div>
                                                 </div>
                                                 <img class="front page hide-back"/>
@@ -99,7 +95,6 @@
                                             <div transform="ry: -90">
                                                 <div class="gravity">
                                                     <div class="back page absolute expand hide-back" transform="ry: 180">
-                                                        <div class="title" transform="rz: 180">The end</div>
                                                         <div class="description">The end</div>
                                                     </div>
                                                     <img class="front page hide-back"/>
