--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <div class="sheet absolute" transform="rz: 15; y: -80">
                                     <div class="gravity">
                                         <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
-                                            <div class="description">The search</div>
+                                            <div class="description"></div>
                                         </div>
                                         <img class="front page hide-back"/>
                                         <!--<img class="front page hide-back" src="https://c3.staticflickr.com/3/2856/9840909545_4b7a28c426_c.jpg"/>-->
@@ -53,7 +53,7 @@
                                     <div class="gravity">
                                         <div class="sheet absolute" transform="z: 250; rx: -30; ry: -20">
                                             <div class="back page absolute expand hide-back" transform="ry: 180">
-                                                <div class="description">Goat face</div>
+                                                <div class="description"></div>
                                             </div>
                                             <img class="front page hide-back"/>
                                             <!--<img class="front page hide-back" src="https://c2.staticflickr.com/4/3103/2639549349_ee6952a23f.jpg"/>-->
@@ -66,7 +66,7 @@
                                         <div class="gravity">
                                             <div transform="ry: -90">
                                                 <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180">
-                                                    <div class="description">Greeks</div>
+                                                    <div class="description"></div>
                                                 </div>
                                                 <img class="front page hide-back" transform="rz: 180"/>
                                                 <!--<img class="front page hide-back" transform="rz: 180" src="https://c3.staticflickr.com/3/2827/9840901813_80cdccff89_c.jpg"/>-->
@@ -80,7 +80,7 @@
                                         <div class="gravity">
                                             <div transform="rx: -90">
                                                 <div class="back page absolute expand hide-back" transform="ry: 180">
-                                                    <div class="description">The star</div>
+                                                    <div class="description"></div>
                                                 </div>
                                                 <img class="front page hide-back"/>
                                                 <!--<img class="front page hide-back" src="https://c4.staticflickr.com/4/3255/2793725349_5205129a97.jpg"/>-->
@@ -95,7 +95,7 @@
                                             <div transform="ry: -90">
                                                 <div class="gravity">
                                                     <div class="back page absolute expand hide-back" transform="ry: 180">
-                                                        <div class="description">The end</div>
+                                                        <div class="description"></div>
                                                     </div>
                                                     <img class="front page hide-back"/>
                                                     <!--<img class="front page hide-back" src="https://c4.staticflickr.com/4/3671/9840742114_afb7cf5dc2_z.jpg"/>-->
