--- a/index.html
+++ b/index.html
@@ -39,19 +39,10 @@
                                     <div class="outer-cover expand hide-back"><div class="title">Portfolio</div></div>
                                 </div>
 
-                                <div class="sheet absolute" transform="rz: 15; y: -80">
-                                    <div class="gravity">
-                                        <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
-                                            <div class="description"></div>
-                                        </div>
-                                        <img class="front page hide-back"/>
-                                    </div>
-                                </div>
-
-                                <div class="absolute expand" transform="rx: 90">
-                                    <div class="gravity">
-                                        <div class="sheet absolute" transform="z: 250; rx: -30; ry: -20">
-                                            <div class="back page absolute expand hide-back" transform="ry: 180">
+                                <div class="scaler absolute animated">
+                                    <div class="sheet" transform="rz: 15; y: -80">
+                                        <div class="gravity">
+                                            <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
                                                 <div class="description"></div>
                                             </div>
                                             <img class="front page hide-back"/>
@@ -59,23 +50,10 @@
                                     </div>
                                 </div>
 
-                                <div class="sheet absolute" transform="y: 30; z: -225; rz: -30; rx: -10">
-                                    <div transform="ry: 90">
-                                        <div class="gravity">
-                                            <div transform="ry: -90">
-                                                <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180">
-                                                    <div class="description"></div>
-                                                </div>
-                                                <img class="front page hide-back" transform="rz: 180"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="sheet absolute" transform="x: -200; y: -75; z: 150; rx: 30">
-                                    <div transform="rx: 90; ry: 180">
-                                        <div class="gravity">
-                                            <div transform="rx: -90">
+                                <div class="absolute expand" transform="rx: 90">
+                                    <div class="gravity">
+                                        <div class="scaler absolute animated">
+                                            <div class="sheet" transform="z: 250; rx: -30; ry: -20">
                                                 <div class="back page absolute expand hide-back" transform="ry: 180">
                                                     <div class="description"></div>
                                                 </div>
@@ -85,15 +63,47 @@
                                     </div>
                                 </div>
 
-                                <div class="sheet absolute" transform="x: 225; y: -200; z: 150; rx: 30; ry: 30; rz: -15">
-                                    <div transform="ry: 90">
-                                        <div class="gravity">
-                                            <div transform="ry: -90">
-                                                <div class="gravity">
+                                <div class="scaler absolute animated">
+                                    <div class="sheet" transform="y: 30; z: -225; rz: -30; rx: -10">
+                                        <div transform="ry: 90">
+                                            <div class="gravity">
+                                                <div transform="ry: -90">
+                                                    <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180">
+                                                        <div class="description"></div>
+                                                    </div>
+                                                    <img class="front page hide-back" transform="rz: 180"/>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="scaler absolute animated">
+                                    <div class="sheet" transform="x: -200; y: -75; z: 150; rx: 30">
+                                        <div transform="rx: 90; ry: 180">
+                                            <div class="gravity">
+                                                <div transform="rx: -90">
                                                     <div class="back page absolute expand hide-back" transform="ry: 180">
                                                         <div class="description"></div>
                                                     </div>
                                                     <img class="front page hide-back"/>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="scaler absolute animated">
+                                    <div class="sheet" transform="x: 225; y: -200; z: 150; rx: 30; ry: 30; rz: -15">
+                                        <div transform="ry: 90">
+                                            <div class="gravity">
+                                                <div transform="ry: -90">
+                                                    <div class="gravity">
+                                                        <div class="back page absolute expand hide-back" transform="ry: 180">
+                                                            <div class="description"></div>
+                                                        </div>
+                                                        <img class="front page hide-back"/>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
