Pages are shrinked on startup

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     <div class="outer-cover expand hide-back"><div class="title">Portfolio</div></div>
                                 </div>
 
-                                <div class="scaler absolute animated">
+                                <div class="scaler absolute shrink animated">
                                     <div class="sheet" transform="rz: 15; y: -80">
                                         <div class="gravity">
                                             <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
@@ -63,7 +63,7 @@
                                     </div>
                                 </div>
 
-                                <div class="scaler absolute animated">
+                                <div class="scaler absolute shrink animated">
                                     <div class="sheet" transform="y: 30; z: -225; rz: -30; rx: -10">
                                         <div transform="ry: 90">
                                             <div class="gravity">
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
 
-                                <div class="scaler absolute animated">
+                                <div class="scaler absolute shrink animated">
                                     <div class="sheet" transform="x: -200; y: -75; z: 150; rx: 30">
                                         <div transform="rx: 90; ry: 180">
                                             <div class="gravity">
@@ -93,7 +93,7 @@
                                     </div>
                                 </div>
 
-                                <div class="scaler absolute animated">
+                                <div class="scaler absolute shrink animated">
                                     <div class="sheet" transform="x: 225; y: -200; z: 150; rx: 30; ry: 30; rz: -15">
                                         <div transform="ry: 90">
                                             <div class="gravity">
