• Added freeze() / release() • Test freeze / release all

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <button id="enable">Enable</button>
 <button id="disable">Disable</button>
+<button id="release">Release</button>
+<button id="freeze">Freeze</button>
 <button id="hide">Hide</button>
 <button id="show">Show</button>
 <button id="shuffle-all">Shuffle all</button>
@@ -52,7 +54,7 @@
 
                     <div class="gravity">
                         <div id="circle" at="oy: 0; z:92; rx:261; ry:336; rz:282"  ></div>
-                        </div>
+                    </div>
                     <div id="text">
                         Lorem ipsum dolor sit amet, consectetur <a href="http://www.amazon.com">adipiscing</a> elit. Ut aliquet <a href="#to">cursus</a> enim, et varius nibh dictum non. Ut tincidunt augue in urna vestibulum at venenatis metus cursus. Phasellus porta tortor sit amet elit elementum id faucibus purus facilisis. Mauris pharetra consequat mi, non mattis ligula feugiat eget. Vivamus consectetur orci ac mauris dignissim egestas. Aliquam erat volutpat. Sed imperdiet, lorem eget feugiat laoreet, enim diam pulvinar est, at sodales nulla metus at nisi. Etiam at hendrerit ligula. Sed eget est posuere tellus accumsan tempor sed rhoncus ipsum. Sed augue tortor, laoreet ac congue id, sagittis at nunc. Fusce a magna convallis lorem euismod porttitor sit amet vitae magna. Nulla lacus purus, volutpat sed rutrum non, tempor in tellus. Cras vel mi ac augue eleifend bibendum.
 
