Tested freeze() / release() single

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 <button id="enable">Enable</button>
 <button id="disable">Disable</button>
 <button id="release">Release</button>
+<button id="release2">Release 1</button>
+<button id="release3">Release 2</button>
 <button id="freeze">Freeze</button>
+<button id="freeze2">Freeze 1</button>
+<button id="freeze3">Freeze 2</button>
 <button id="hide">Hide</button>
 <button id="show">Show</button>
 <button id="shuffle-all">Shuffle all</button>
