Scale (reveal) portfolio on enable

--- a/index.html
+++ b/index.html
@@ -32,57 +32,30 @@
                             <img class="black-hole absolute" transform="z:-120; rz:120; rx:6; ry:6" src="images/black-hole-sd.png"/>
                             <img class="black-hole absolute" transform="z:-160; rz:150; rx:-6; ry:-6" src="images/black-hole-sd.png"/>
                         </div>
-                        <div class="portfolio-stand absolute expand hidden" transform="z: 5">
-                            <div class="portfolio" transform="ox: 1; oy: 1; rx: -115; ry: 15">
-                                <div class="back-cover absolute expand" transform="oy: 1; rx: -17.5; ry: 180">
-                                    <div class="inner-cover absolute expand hide-back" transform="ry: 180"></div>
-                                    <div class="outer-cover expand hide-back"><div class="title">Portfolio</div></div>
-                                </div>
 
-                                <div class="scaler absolute hidden animated">
-                                    <div class="sheet" transform="rz: 15; y: -80">
-                                        <div class="gravity">
-                                            <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
-                                                <div class="description"></div>
-                                            </div>
-                                            <img class="front page hide-back"/>
-                                        </div>
+                        <div class="portfolio-scaler absolute expand hidden shrink animated">
+                            <div class="portfolio-stand absolute expand" transform="z: 5">
+                                <div class="portfolio" transform="ox: 1; oy: 1; rx: -115; ry: 15">
+                                    <div class="back-cover absolute expand" transform="oy: 1; rx: -17.5; ry: 180">
+                                        <div class="inner-cover absolute expand hide-back" transform="ry: 180"></div>
+                                        <div class="outer-cover expand hide-back"><div class="title">Portfolio</div></div>
                                     </div>
-                                </div>
 
-                                <div class="absolute expand" transform="rx: 90">
-                                    <div class="gravity">
-                                        <div class="scaler absolute hidden animated">
-                                            <div class="sheet" transform="z: 250; rx: -30; ry: -20">
-                                                <div class="back page absolute expand hide-back" transform="ry: 180">
+                                    <div class="scaler absolute hidden animated">
+                                        <div class="sheet" transform="rz: 15; y: -80">
+                                            <div class="gravity">
+                                                <div class="back page absolute expand hide-back" transform="ry: 180; rz:180">
                                                     <div class="description"></div>
                                                 </div>
                                                 <img class="front page hide-back"/>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="scaler absolute hidden animated">
-                                    <div class="sheet" transform="y: 30; z: -225; rz: -30; rx: -10">
-                                        <div transform="ry: 90">
-                                            <div class="gravity">
-                                                <div transform="ry: -90">
-                                                    <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180">
-                                                        <div class="description"></div>
-                                                    </div>
-                                                    <img class="front page hide-back" transform="rz: 180"/>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="scaler absolute hidden animated">
-                                    <div class="sheet" transform="x: -200; y: -75; z: 150; rx: 30">
-                                        <div transform="rx: 90; ry: 180">
-                                            <div class="gravity">
-                                                <div transform="rx: -90">
+                                    <div class="absolute expand" transform="rx: 90">
+                                        <div class="gravity">
+                                            <div class="scaler absolute hidden animated">
+                                                <div class="sheet" transform="z: 250; rx: -30; ry: -20">
                                                     <div class="back page absolute expand hide-back" transform="ry: 180">
                                                         <div class="description"></div>
                                                     </div>
@@ -91,14 +64,27 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="scaler absolute hidden animated">
-                                    <div class="sheet" transform="x: 225; y: -200; z: 150; rx: 30; ry: 30; rz: -15">
-                                        <div transform="ry: 90">
-                                            <div class="gravity">
-                                                <div transform="ry: -90">
-                                                    <div class="gravity">
+                                    <div class="scaler absolute hidden animated">
+                                        <div class="sheet" transform="y: 30; z: -225; rz: -30; rx: -10">
+                                            <div transform="ry: 90">
+                                                <div class="gravity">
+                                                    <div transform="ry: -90">
+                                                        <div class="back page absolute expand hide-back" transform="ry: 180; rz: 180">
+                                                            <div class="description"></div>
+                                                        </div>
+                                                        <img class="front page hide-back" transform="rz: 180"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="scaler absolute hidden animated">
+                                        <div class="sheet" transform="x: -200; y: -75; z: 150; rx: 30">
+                                            <div transform="rx: 90; ry: 180">
+                                                <div class="gravity">
+                                                    <div transform="rx: -90">
                                                         <div class="back page absolute expand hide-back" transform="ry: 180">
                                                             <div class="description"></div>
                                                         </div>
@@ -108,11 +94,28 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="front-cover expand" transform="oy: 1; rx: -17.5">
-                                    <div class="inner-cover absolute expand hide-back" transform="ry: 180"></div>
-                                    <div class="outer-cover expand hide-back"><div class="title">Portfolio</div></div>
+                                    <div class="scaler absolute hidden animated">
+                                        <div class="sheet" transform="x: 225; y: -200; z: 150; rx: 30; ry: 30; rz: -15">
+                                            <div transform="ry: 90">
+                                                <div class="gravity">
+                                                    <div transform="ry: -90">
+                                                        <div class="gravity">
+                                                            <div class="back page absolute expand hide-back" transform="ry: 180">
+                                                                <div class="description"></div>
+                                                            </div>
+                                                            <img class="front page hide-back"/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="front-cover expand" transform="oy: 1; rx: -17.5">
+                                        <div class="inner-cover absolute expand hide-back" transform="ry: 180"></div>
+                                        <div class="outer-cover expand hide-back"><div class="title">Portfolio</div></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
