Added hover effect to pages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://github.com/janouma/AvalonA/tarball/master" class="btn">Download .tar.gz</a>
         </section>
 
-        <section id="t3d-frame" class="preview">
+        <section id="t3d-frame" class="preview no-events">
             <img class="lightfx" src="images/lightfx-sd.png"/>
             <div class="t3d-layer" id="t3d-layer">
                 <div transform="rx:60">
