--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="overlay hidden no-opacity animated">
-                <img class="zoom"/>
+                <img class="zoom shrink animated"/>
             </div>
         </section>
 
